--- a/08-HTML/homework/homework.html
+++ b/08-HTML/homework/homework.html
@@ -12,7 +12,7 @@
         </div>
 
         <div class="divClass">
-            <span id="spanId">Mi comida favorita es la Mexicana, tacos, chilaquiles, etc.</span>
+            <span id="spanId">Mi comida favorita es la Mexicana, tacos, chilaquiles, etc.</span> <br/>
             <a href="https://lacasadetono.mx/" >Este es mi restaurante favorito... </a>
         </div>
 
